--- a/RedaTech/src/main/webapp/menu.xhtml
+++ b/RedaTech/src/main/webapp/menu.xhtml
@@ -12,7 +12,7 @@
     <p:menuitem value="Home" url="#" />
     <p:menuitem value="Material" url="#" />
     <p:menuitem value="Vídeos" url="#" />
-    <p:menuitem value="Redação" url="#" />
+    <p:menuitem value="Redação" url="http://localhost:8888/red/redacao.xhtml" />
 </p:breadCrumb>
 </h:body>
 </html>
