--- a/RedaTech/src/main/webapp/cadastro.xhtml
+++ b/RedaTech/src/main/webapp/cadastro.xhtml
@@ -2,11 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
 	<title>Cadastro</title>
 	
 </h:head>
+<ui:include src="menu.xhtml" />
 <h:body>
 	
  
