Hj nem jesus na causa

--- a/RedaTech/src/main/webapp/menu.xhtml
+++ b/RedaTech/src/main/webapp/menu.xhtml
@@ -9,10 +9,11 @@
 
 <h:body>	
 	<p:dock position="bottom"  >
-    <p:menuitem value="Cadastro" icon="" url="http://localhost:8888/red/cadastro.xhtml"/>
+    <p:menuitem value="Cadastro" icon="file:///C:/Users/Aluno/git/RedaTech16/RedaTech/src/main/resources/fotos/%CDcone.png" url="http://localhost:8888/red/cadastro.xhtml"/>
     <p:menuitem value="Material" icon="file:///C:/Users/Aluno/git/RedaTech15/RedaTech/src/main/resources/fotos/Material.png" url="http://localhost:8888/red/material.xhtml"/>
     <p:menuitem value="Videos " icon="file:///C:/Users/Aluno/git/RedaTech15/RedaTech/src/main/resources/fotos/Video.png" url="http://localhost:8888/red/videos.xhtml"/>
     <p:menuitem value="Redacao" icon=" file:///C:/Users/Aluno/git/RedaTech15/RedaTech/src/main/resources/fotos/Redacao.png" url="http://localhost:8888/red/redacao.xhtml"/>
+    <p:menuitem value="Redacao" icon="file:///C:/Users/Aluno/git/RedaTech16/RedaTech/src/main/resources/fotos/Home.png" url="http://localhost:8888/red/home.xhtml"/>
     </p:dock>
     
 </h:body>
