--- a/RedaTech/src/main/webapp/redacao.xhtml
+++ b/RedaTech/src/main/webapp/redacao.xhtml
@@ -10,6 +10,7 @@
 
 
 <h:body>
+<ui:include src="menu.xhtml" />
 	<p:messages />
 	<h:form>    
     <p:editor id="editor" widgetVar="editorWidget" value="#{redacaoBean.entidade.redacao}" width="600" />
