--- a/RedaTech/src/main/webapp/home.xhtml
+++ b/RedaTech/src/main/webapp/home.xhtml
@@ -22,6 +22,13 @@
                     value="800" />
             </h:panelGrid>
         </p:tab>
+        <p:tab title="A banalização do mal">
+            <h:panelGrid columns="2" cellpadding="10">
+                <p:graphicImage name="file:///C:/Users/Aluno/git/RedaTech18/RedaTech/src/main/resources/fotos/Participa%E7%E3o%20Social.png" />
+                <h:outputText
+                    value="800" />
+            </h:panelGrid>
+        </p:tab>
     </p:accordionPanel>
     </h:form>
 </h:body>
