--- a/RedaTech/src/main/webapp/home.xhtml
+++ b/RedaTech/src/main/webapp/home.xhtml
@@ -8,12 +8,12 @@
 	<title>Home</title>
 	
 </h:head>
-<h:body>
-<ui:include src="menu.xhtml" />
+<body>
+	<ui:include src="menu.xhtml"/>
 	<h:form id="form">  
     <p:growl id="msgs" showDetail="true" />
  
-    <h3 style="margin-top:0">Minhas redações</h3>
+    <h3 style="margin-top:0; font-color:#FFFFFF" >Minhas redações</h3>
     <p:accordionPanel>
         <p:tab title="Participação social">
             <h:panelGrid columns="2" cellpadding="10">
@@ -31,5 +31,5 @@
         </p:tab>
     </p:accordionPanel>
     </h:form>
-</h:body>
+</body>
 </html>
