--- a/RedaTech/src/main/webapp/logar.xhtml
+++ b/RedaTech/src/main/webapp/logar.xhtml
@@ -9,7 +9,7 @@
 
 </h:head>
 <ui:include src="menu.xhtml" />
-<h:body>
+<body style="background-image:url(./fotos/l.png);">
 
 
 	<p:tabView style="width:800px;height:370px;margin:auto;">
@@ -36,5 +36,5 @@
 	</p:tabView>
 
 
-</h:body>
+</body>
 </html>
