--- a/RedaTech/src/main/webapp/cadastrar.xhtml
+++ b/RedaTech/src/main/webapp/cadastrar.xhtml
@@ -8,7 +8,7 @@
 	<title>Cadastro</title>
 	
 </h:head>
-<h:body>
+<body style="background-image:url(./fotos/l.png);">
 <ui:include src="menu.xhtml" />
  
 		   <p:tabView style="width:800px;height:400px;margin:auto;">
@@ -72,5 +72,5 @@
 	 		</p:tabView>
  
 
-</h:body>
+</body>
 </html>
