--- a/RedaTech/src/main/webapp/redacao.xhtml
+++ b/RedaTech/src/main/webapp/redacao.xhtml
@@ -35,7 +35,7 @@
      
     <br /> <br />
      
-    <p:commandButton value="Submit" ajax="false" action="#{fileUploadView.upload}"  />
+    <p:commandButton value="Submit" ajax="false" action="#{redacaoBean.save}"  />
 </h:form>
 </h:body>
 </html>
