--- a/RedaTech/src/main/webapp/login.xhtml
+++ b/RedaTech/src/main/webapp/login.xhtml
@@ -8,7 +8,6 @@
 	<title>Logar</title>
 
 </h:head>
-<ui:include src="menu.xhtml" />
 <body style="background-image:url(./fotos/l.png);">
 
 
@@ -26,7 +25,7 @@
 					<h:inputSecret id="j_password" />
 					<p:commandButton id="btnLogin" value="Login" ajax="false"
 						icon="fa fa-sign-in" />
-					<p:button   outcome="cadastrar"
+					<p:button   outcome="cadastro.xhtml"
 						value="Cadastrar" />
 				</h:panelGrid>
 			</h:form>
