--- a/RedaTech/src/main/webapp/turmas.xhtml
+++ b/RedaTech/src/main/webapp/turmas.xhtml
@@ -5,10 +5,15 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
-	<title>Home</title>
-	
+	<title>Produções</title>
 </h:head>
-<body>
-	<p> Página com as turmas</p>
-</body>
+
+
+<h:body>
+<ui:include src="menu.xhtml" />
+	<p> Prof. Fulano</p>
+	<p>Botão para entrar na turma</p>
+	
+	
+</h:body>
 </html>
