--- a/RedaTech/src/main/webapp/cadastro.xhtml
+++ b/RedaTech/src/main/webapp/cadastro.xhtml
@@ -15,7 +15,7 @@
 
 			<h:form id="form-cadastro">
 
-				<h:panelGrid id="panelGrid-campos-form" columns="2" cellpadding="10">
+				<p:panelGrid id="panelGrid-campos-form" columns="2" cellpadding="10">
 
 					<p:outputLabel value="Nome" for="inputText-nome" />
 					<p:inputText id="inputText-nome" style="width:300px" maxlength="80"
@@ -23,9 +23,8 @@
 						requiredMessage="O nome é de preenchimento obrigatório" />
 					
 					<p:outputLabel value="Email" for="inputText-email" />
-					<p:inputText id="inputText-email" style="width:300px"
-						maxlength="80" value="#{usuarioBean.entidade.email}"
-						required="true"
+					<p:inputText id="inputText-email" style="width:300px" maxlength="80"
+						value="#{usuarioBean.entidade.email}" required="true"
 						requiredMessage="O email é de preenchimento obrigatório" />
 
 					<p:outputLabel for="button" value="Nascimento:" />
@@ -34,11 +33,11 @@
 
 
 
-					<p:outputLabel value="Email" for="inputText-email" />
-					<p:inputText id="inputText-email" style="width:300px"
-						maxlength="80" value="#{usuarioBean.entidade.email}"
+					<p:outputLabel value="Nome do Usuário" for="inputText-username" />
+					<p:inputText id="inputText-username" style="width:300px"
+						maxlength="80" value="#{usuarioBean.entidade.username}"
 						required="true"
-						requiredMessage="O email é de preenchimento obrigatório" />
+						requiredMessage="O nome do usuário é de preenchimento obrigatório" />
 
 					<p:outputLabel value="Senha" for="inputText-senha" />
 					<p:password id="inputText-senha" style="width:400px"
@@ -55,7 +54,7 @@
 					<p:commandButton value="Cadastrar" id="commandButton-salvar"
 						icon="ui-icon-gear" actionListener="#{usuarioBean.save()}"
 						update="panelGrid-campos-form" />
-				</h:panelGrid>
+				</p:panelGrid>
 
 				<p:messages showDetail="true" autoUpdate="true" closable="true"
 					severity="warn" />
