--- a/RedaTech/src/main/webapp/menu.xhtml
+++ b/RedaTech/src/main/webapp/menu.xhtml
@@ -1,4 +1,4 @@
-	q	<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
@@ -9,10 +9,10 @@
 
 <h:body>	
 	<p:dock position="bottom"  >
-    <p:menuitem value="Cadastro" icon="file:///C:/Users/Aluno/git/RedaTech16/RedaTech/src/main/resources/fotos/%CDcone.png" url="http://localhost:8888/red/cadastrar.xhtml"/>
-    <p:menuitem value="Videos " icon="file:///C:/Users/Aluno/git/RedaTech15/RedaTech/src/main/resources/fotos/Video.png" url="http://localhost:8888/red/videos.xhtml"/>
-    <p:menuitem value="Producoes" icon="file:///C:/Users/Aluno/git/RedaTech26/RedaTech/src/main/webapp/fotos/produ%E7%F5es.png" url="http://localhost:8888/red/producoes.xhtml"/>
-    <p:menuitem value="Menu" icon="file:///C:/Users/Aluno/git/RedaTech16/RedaTech/src/main/resources/fotos/Home.png" url="http://localhost:8888/red/home.xhtml"/>
+    <p:menuitem value="Cadastro" icon="./fotos/icone.png" url="./redacao.xhtml"/>
+    <p:menuitem value="Videos " icon="./fotos/Video.png" url="./videos.xhtml"/>
+    <p:menuitem value="Producoes" icon="./fotos/producoes.png" url="./redacoes.xhtml"/>
+    <p:menuitem value="Menu" icon="./fotos/Home.png" url="./home.xhtml"/>
     </p:dock>
     
 </h:body>
