--- a/RedaTech/src/main/webapp/menu.xhtml
+++ b/RedaTech/src/main/webapp/menu.xhtml
@@ -10,9 +10,9 @@
 <h:body>	
 	<p:dock position="bottom"  >
     <p:menuitem value="Cadastro" icon="./fotos/icone.png" url="./redacao.xhtml"/>
-    <p:menuitem value="Videos " icon="./fotos/Video.png" url="./videos.xhtml"/>
+    <p:menuitem value="Videos " icon="./fotos/video.png" url="./videos.xhtml"/>
     <p:menuitem value="Producoes" icon="./fotos/producoes.png" url="./redacoes.xhtml"/>
-    <p:menuitem value="Menu" icon="./fotos/Home.png" url="./home.xhtml"/>
+    <p:menuitem value="Menu" icon="./fotos/home.png" url="./home.xhtml"/>
     </p:dock>
     
 </h:body>
